more unit tests
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@37 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/test/Makefile
+++ b/test/Makefile
@@ -58,7 +58,7 @@ INCLUDE = -I src -I ../src -I $(OUNIT_PATH) -I $(EXTLIB_PATH) -I $(APRON_PATH)
 LIBS = str.cma unix.cma extLib.cma bigarray.cma gmp.cma apron.cma polkaMPQ.cma oUnit.cma 
 IMI_OBJ = Global.cmo NumConst.cmo Automaton.cmo 
 
-UNIT_TESTS = ImitatorParser Automaton
+UNIT_TESTS = ImitatorParser Automaton NumConst
 UNIT_SRC = $(addprefix src/test, $(addsuffix .ml, $(UNIT_TESTS))) 
 UNIT_CMI = $(addprefix src/test, $(addsuffix .cmi, $(UNIT_TESTS))) testSuite.cmi
 UNIT_OBJ = $(addprefix src/test, $(addsuffix .cmo, $(UNIT_TESTS))) testSuite.cmo
