fixed test case
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@39 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/test/Makefile
+++ b/test/Makefile
@@ -16,9 +16,9 @@ COV_V0_FILES  = $(addprefix data/, $(addsuffix .v0, $(COV_TESTS)))
 COV_RESULTS   = $(addprefix log/, $(addsuffix .cov.log, $(COV_TESTS)))
 
 
-default all: clean_regr unit regression
+default all: unit regression
 
-regression: regr_inv regr_cov
+regression: clean_regr regr_inv regr_cov
 	@ echo '================================================'
 	@ if ( test -e fail ); then \
 	    echo [SUMM] There were failing test cases. ; fi
