added unit test for LinearConstraint
git-svn-id: https://svn.lsv.ens-cachan.fr/kuehne/projects/IMITATOR2/trunk@54 6f1578d2-a1e8-4f7d-a79a-10a3a1991f00

--- a/test/Makefile
+++ b/test/Makefile
@@ -88,7 +88,7 @@ endif
 INCLUDE = -I src -I ../src -I ../lib -I $(OUNIT_PATH) -I $(EXTLIB_PATH) -I $(OCAML_PPL_PATH) -I $(OCAML_GMP_PATH)
 LIBS += oUnit.cma imitator.cma 
  
-UNIT_TESTS = ImitatorParser Automaton NumConst
+UNIT_TESTS = ImitatorParser Automaton NumConst LinearConstraint
 UNIT_SRC = $(addprefix src/test, $(addsuffix .ml, $(UNIT_TESTS))) 
 UNIT_CMI = $(addprefix src/test, $(addsuffix .cmi, $(UNIT_TESTS))) testSuite.cmi
 UNIT_OBJ = $(addprefix src/test, $(addsuffix .cmo, $(UNIT_TESTS))) testSuite.cmo
