--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ deploy:
     file: 'bin/imitator-$TRAVIS_TAG-amd64'
     skip_cleanup: true
     on:
-      tags: false
+      tags: true
       condition: $TRAVIS_OS_NAME = linux && $DISTRIBUTED = False
   - provider: releases
     api_key:
@@ -29,5 +29,5 @@ deploy:
     file: 'bin/patator-$TRAVIS_TAG-amd64'
     skip_cleanup: true
     on:
-      tags: false
+      tags: true
       condition: $TRAVIS_OS_NAME = linux && $DISTRIBUTED = True
