--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,34 @@
 *.cmx
 *.cmxs
 *.cmxa
+*.pyc
+benchmarks/**/*.dot
+benchmarks/**/*.jpg
+benchmarks/**/*.log
+benchmarks/**/*.png
+benchmarks/**/*.states
+benchmarks/**/*.txt
+benchmarks/**/*.res
+
+testing/**/*.dot
+testing/**/*.jpg
+testing/**/*.log
+testing/**/*.png
+testing/**/*.txt
+testing/**/*.res
+
+src/BuildInfo.ml
+src/BuildInfo.mli
+src/PaTATOR.ml
+
+doc/IMITATOR-not-developer-manual.brf
+doc/IMITATOR-not-developer-manual.pdf
+doc/IMITATOR-user-manual.brf
+doc/IMITATOR-user-manual.pdf
+doc/classDiagramFull.dot
+doc/classDiagramFull.png
+doc/classDiagramSimplified.dot
+doc/classDiagramSimplified.png
 
 # PyCharm configuration
 .idea
