update travis to compile documentation

--- a/.gitignore
+++ b/.gitignore
@@ -57,7 +57,10 @@ doc/*.log
 doc/*.toc
 doc/IMITATOR-not-developer-manual.out
 doc/IMITATOR-not-developer-manual.pdf
+doc/IMITATOR-user-manual.pdf
+doc/classDiagramFull.dot
 doc/classDiagramFull.png
+doc/classDiagramSimplified.dot
 doc/classDiagramSimplified.png
 
 # IDE
