--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,8 @@ benchmarks/**/*.jpg
 benchmarks/**/*.states
 benchmarks/**/*.pdf
 benchmarks/**/*.xml
+benchmarks/**/*.jani
+benchmarks/**/*.hy
 
 *_cart.png
 *_cart_bounds.txt
@@ -66,6 +68,8 @@ tests/**/*.sh
 tests/**/*.pdf
 tests/**/*.ps
 tests/**/*.xml
+tests/**/*.jani
+tests/**/*.hy
 *.pdf
 *.ps
 
