--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,20 @@ src/PaTATOR.ml
 
 iamadeveloper
 
-# testing logs
+# generated files
+
+/*jpg
+/*png
+
+*.pdf
+*.ps
 
 *-regenerated.imi
 *.res
 *.states
+*_cart.png
+*_cart_bounds.txt
+*_cart_points_*.txt
 
 benchmarks/**/*-regenerated.imi
 benchmarks/**/*.res
@@ -51,9 +60,6 @@ benchmarks/**/*.pdf
 benchmarks/**/*.xml
 benchmarks/**/*.jani
 
-*_cart.png
-*_cart_bounds.txt
-*_cart_points_*.txt
 
 tests/**/*-regenerated.imi
 tests/**/*.log
@@ -68,8 +74,6 @@ tests/**/*.ps
 tests/**/*.xml
 tests/**/*.jani
 tests/**/*.hy
-*.pdf
-*.ps
 
 # binaries
 *.native
