--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,6 +9,7 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
+          - macos-12
     runs-on: ${{ matrix.os }}
     env:
       DISTRIBUTED: False
