build: add lex and yacc to dune project

--- a/src/dune
+++ b/src/dune
@@ -9,6 +9,12 @@
   parsingStructure
   result))
 
+(ocamllex
+ (modules ModelLexer PropertyLexer))
+
+(ocamlyacc
+ (modules ModelParser PropertyParser))
+
 (env
  (dev
   (flags
